@@ -36,6 +36,9 @@ IN DEVELOPMENT
    * Merge directives now fetch prerequisites from the target branch if
      needed.  (Aaron Bentley)
 
+   * pycurl now handles digest authentication.
+     (Vincent Ladeuil)
+
    * ``reconfigure`` can now convert from repositories.  (Aaron Bentley)
 
    * ``-l`` is now a short form for ``--limit`` in ``log``.  (Matt Nordhoff)
@@ -53,6 +56,10 @@ IN DEVELOPMENT
 
    * Fix traceback when sending large response bodies over the smart protocol
      on Windows. (Andrew Bennetts, #115781)
+
+   * pycurl authentication handling was broken and incomplete. Fix handling of
+     user:pass embedded in the urls.
+     (Vincent Ladeuil, #177643)
 
    * Transform failures no longer cause ImmortalLimbo errors (Aaron Bentley,
      #137681)
